--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <!--  -->
       <div class="preview_container">
         <!-- Iframe to preview the content -->
-        <iframe id="preview" frameborder="0"></iframe>
+        <iframe
+          style="width: 100%; height: 100%"
+          id="preview"
+          frameborder="0"
+        ></iframe>
       </div>
       <div class="panels">
         <!-- HTML Editor -->
