refcator/fix: editors text format

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </span>
           </div>
           <div class="editor">
-            <textarea id="js"></textarea>
+            <div id="js"></div>
           </div>
         </section>
       </div>
